# composite-failure-surrogates

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
app/: README.md  build-release.bat  build.bat  capture_all_tabs.ps1  capture_window.ps1  check-build.mjs  check-registry.ps1  create-shortcut.ps1  dev.bat  index.html  package-lock.json  package.json  screenshot_all_tabs.mjs  screenshot_full_test.mjs  setup-mac.sh  test_benchmarks.mjs  test_bjsfm.mjs  test_cold_start.mjs  test_debug2.mjs  test_debug_ortho.mjs  test_details.mjs  test_explorer_sweeps.mjs  test_failure_debug.mjs  test_fix3.mjs  test_fix_verify.mjs  test_fixes_comprehensive.mjs  test_full_verify.mjs  test_lekhnitskii_math.mjs  test_mc_debug.mjs  test_predict_raw.mjs  test_predictions.py  test_release_final.mjs  test_stress_field.mjs  test_stress_fix.mjs  test_tauri_live.mjs  test_validation.mjs  vite.config.ts
app/sidecar/: inference.py  requirements.txt  rp3-sidecar.spec  server.py
app/src/: App.tsx  build-meta.d.ts  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
docs/versions/: V10_-_101k_CalculiX_Cloud_Campaign_(GCP).md  V11_-_CompositeBench_1.155M_Campaign_(Planning).md  V11_-_CompositeBench_Analytical_Validation.md  V1_-_Circular_Holes_&_Initial_Pipeline.md  V2_-_Elliptical_Defects_&_Enhanced_Pipeline.md  V3_-_Two-Hole_Interaction_&_Biaxial_Loading.md  V4_-_Composite_N-Defect_Plates.md  V5_-_Jagged_Crack_Geometry_&_5000_Samples.md  V6_-_Progressive_Damage_(Failed).md  (+3 more)
infrastructure/gcp/: gc.cmd  (+4 more)
(+78 files in other folders)
