[package]
name = "rp3"
version = "0.3.2"
description = "RP3 Composite Failure Surrogate"
authors = ["Artur Akoev"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["rt", "time"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
